Navigation to profile side

--- a/frontend/src/views/profile.htm
+++ b/frontend/src/views/profile.htm
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-  <h1>lkjhgfd</h1>
-
-  <a href="profile.htm">Profile</a>
-
+  <h1>Min Profil</h1>
+  <h2>Brugeroplysninger</h2>
+  <h3>Højde</h3> <h3 id="height"></h3>
+  <h3>Alder</h3> <h3 id="age"></h3>
+  
+  
   <script src="bundle.js"></script>
 </body>
 </html>
