--- a/frontend/src/views/profile.htm
+++ b/frontend/src/views/profile.htm
@@ -2,16 +2,22 @@
 <html lang="en-US">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Coding Template</title>
+  <title>Profile page</title>
   <link rel="stylesheet" type="text/css" href="bundle.css">
 </head>
 
 <body>
-  <h1>Min Profil</h1>
-  <h2>Brugeroplysninger</h2>
-  <h3>Højde</h3> <h3 id="height"></h3>
-  <h3>Alder</h3> <h3 id="age"></h3>
-  
+  <div class="container-fluid wrapper">
+      <div class="row">
+        <div class="col">
+          <h1>Profile</h1>
+          
+          
+
+          <a href="index.htm">Home</a>
+        </div>
+      </div>
+    </div>
   
   <script src="bundle.js"></script>
 </body>
