--- a/frontend/src/css/styles.scss
+++ b/frontend/src/css/styles.scss
@@ -75,3 +75,39 @@ body{
   border:2px solid black;
   border-radius:15px;
 }
+
+
+
+
+
+/**
+* PROFILE PAGE STYLES
+*/
+
+.profileEditBox {
+  border: 1px solid #ccc;
+  width: 30rem;
+  position: absolute;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.5);
+  margin: auto;
+  right: 0;
+  left: 0;
+  top: 10rem;
+  box-sizing: border-box;
+  padding: 1.5rem;
+
+  label {
+    display: block;
+    overflow: hidden;
+
+    p {
+      float: left;
+    }
+
+    input {
+      float: right;
+    }
+  }
+}
