--- a/frontend/src/css/styles.scss
+++ b/frontend/src/css/styles.scss
@@ -4,85 +4,55 @@
 @import url(https://fonts.googleapis.com/css?family=Pacifico);
 @import url('https://fonts.googleapis.com/css?family=Anton');
 
+body{
+  background: #fff;
+}
+
 .wrapper {
-    background: #f0f0f0;
+    max-width: 30rem;
+    border: 1px solid #000;
+    border-radius: 3px;
+    margin: 2rem auto;
+    box-sizing: border-box;
+    padding: 1.5rem 3rem;
+    text-align: center;
 }
 
-body{
-  text-align:center;
+h2,
+h3 {
+  margin-top: 1.5rem;
 }
-
-
-.rainbow {
-  
-   /* Font options */
-  font-family: 'Pacifico', cursive;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  font-size:40px;
-  
-   /* Chrome, Safari, Opera */
-  -webkit-animation: rainbow 3s infinite; 
-  
-  /* Internet Explorer */
-  -ms-animation: rainbow 3s infinite;
-  
-  /* Standar Syntax */
-  animation: rainbow 3s infinite; 
-}
-
-/* Chrome, Safari, Opera */
-@-webkit-keyframes rainbow{
-  0%{color: orange;}	
-  10%{color: purple;}	
-	20%{color: red;}
-  30%{color: CadetBlue;}
-	40%{color: yellow;}
-  50%{color: coral;}
-	60%{color: green;}
-  70%{color: cyan;}
-  80%{color: DeepPink;}
-  90%{color: DodgerBlue;}
-	100%{color: orange;}
-}
-
-/* Internet Explorer */
-@-ms-keyframes rainbow{
-  0%{color: orange;}	
-  10%{color: purple;}	
-	20%{color: red;}
-	40%{color: yellow;}
-	60%{color: green;}
-	100%{color: orange;}
-}
-
-/* Standar Syntax */
-@keyframes rainbow{
-  0%{color: orange;}	
-  10%{color: purple;}	
-	20%{color: red;}
-	40%{color: yellow;}
-	60%{color: green;}
-	100%{color: orange;}
-}
-
-body{
-  background-color:#607D8B;
-}
-
-.container{
-  background-color:#E0F2F1;
-  padding:10px;
-  border:2px solid black;
-  border-radius:15px;
-}
-
-
-
-
 
 /**
 * PROFILE PAGE STYLES
 */
+.profile-page {
+  
+  .btn{
+    display: block;
+    margin: 0 auto 0.3rem;
+    text-align: center;
+  }
+
+  .btn.btn-info {
+    margin-top: 1rem;
+  }
+}
+#profile-info-wrapper {
+
+  .profile-info-content {
+    
+    span {
+      font-weight: bold;
+    }
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+}
 
 .profileEditBox {
   border: 1px solid #ccc;
@@ -110,4 +80,66 @@ body{
       float: right;
     }
   }
+}
+
+
+
+
+.rainbow {
+  
+  /* Font options */
+ font-family: 'Pacifico', cursive;
+ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+ font-size:40px;
+ 
+  /* Chrome, Safari, Opera */
+ -webkit-animation: rainbow 3s infinite; 
+ 
+ /* Internet Explorer */
+ -ms-animation: rainbow 3s infinite;
+ 
+ /* Standar Syntax */
+ animation: rainbow 3s infinite; 
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes rainbow{
+ 0%{color: orange;}	
+ 10%{color: purple;}	
+ 20%{color: red;}
+ 30%{color: CadetBlue;}
+ 40%{color: yellow;}
+ 50%{color: coral;}
+ 60%{color: green;}
+ 70%{color: cyan;}
+ 80%{color: DeepPink;}
+ 90%{color: DodgerBlue;}
+ 100%{color: orange;}
+}
+
+/* Internet Explorer */
+@-ms-keyframes rainbow{
+ 0%{color: orange;}	
+ 10%{color: purple;}	
+ 20%{color: red;}
+ 40%{color: yellow;}
+ 60%{color: green;}
+ 100%{color: orange;}
+}
+
+/* Standar Syntax */
+@keyframes rainbow{
+ 0%{color: orange;}	
+ 10%{color: purple;}	
+ 20%{color: red;}
+ 40%{color: yellow;}
+ 60%{color: green;}
+ 100%{color: orange;}
+}
+
+.container{
+ background-color:#E0F2F1;
+ padding:10px;
+ border:2px solid black;
+ border-radius:15px;
 }
